--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 						<li class="has-dropdown">
 							<a href="#">Account</a>
 							<ul class="dropdown">
-								<li><a href="#">Sign Up</a></li>
-								<li><a href="#">Log In</a></li>
+								<li><a href="login.html">Sign Up</a></li>
+								<li><a href="login.html">Log In</a></li>
 								<li><a href="#">Help</a></li>
 								<li><a href="#">Give Us Feedback</a></li>
 							</ul>
